[gd_scene load_steps=2 format=3 uid="uid://c8xqvk5m3ypht"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118, 0.129, 0.18, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SILT"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continue"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
